# decotra

./: .gitignore  Makefile  README.md  pyproject.toml
decotra/: __init__.py  s3.py
docker/: docker-compose.yaml
examples/: example.py
tests/: test_decotra.py
